
Performance improvements:
		* Improved drawing performance (!731)
		* Improved the performance of importing JSON files with a large number of elements

Bug fixes:
	* Fix displayed locale of constants
	* Rename of psi constant to psqi to avoid clash with psi function
	* Fix crash when loading a project with a workbook as first child (!787)

-----2.12.1 (2025-08-15) -----
Bug fixes:
	* Fix using default font for axis title
	* Fix build with system QXlsx (!693)
	* Fix build with system QADS 4.4 (!694)
	* Crash on import when no projects opened (BUG 503800)
	* Save rotation of axis title seperately for x and y axis
	* Fix disappearing axis ticks (#1146)
	* Don't crash when creating the data spreadsheet for analysis curves (BUG 504662)
	* Fix crash when aspect is added and all docks in content area are hidden (BUG 504794, 502043)
	* Fix crash when column or row was added to spreadsheet from toolbar and no column or row was selected (BUG 504839)
	* Fix issue when the statistics spreadsheet was not shown if the spreadsheet was a child of workbook
	* Fix issue which caused the context menu of an aspect to not be shown after being reparented
	* Handle Windows logical font "MS Shell Dlg 2"
	* Fix crash when deleting a livedata source with missing source file
	* Parser: Remove not required function and reuse function instead of copying (BUG 506925)
	* Fix the export of spreadsheets to SQLite, wrong format was selected internally in the export dialog
	* Fix the export to SQLite of text values in the spreadsheet containing single quotes
	* Fix FITS import and export issues
	* Don't show any error messages and NaN values in the process behavior chart if no column or an empty column was selected
	* Remove unwanted entries on the undo stack that were created when modifying properties of the process behavior and run charts
	* Improve the quality of the fit model preview in the properties explorer and formula view in the random values dialog on hidpi screens