@@ -26,6 +26,7 @@ Bug fixes:
 	* Fix displayed locale of constants
 	* Rename of psi constant to psqi to avoid clash with psi function
 	* Fix crash when loading a project with a workbook as first child (!787)
+	* Fix updating column count in spreadsheet dock when importing data from file
 
 -----2.12.1 (2025-08-15) -----
 Bug fixes:
